--- a/bugs/new.rc
+++ b/bugs/new.rc
@@ -24,13 +24,19 @@
                 "bugs": {}
             }
         }, 
-        "updated": "Friday, 29. July 2011 15:15 UTC"
+        "updated": "Friday, 16. September 2011 16:14 UTC"
     }, 
     "configuration_file": "new.rc", 
     "launchpad_client_name": "lpltk.kernel.ProcNewBugs", 
     "search-criteria-status": [
         "New"
     ], 
+    "search-criteria-tags": [
+        "-kernel-cve-tracking-bug",
+	"-kernel-stable-next",
+	"-kernel-release-tracking-bug"
+    ],
+    "search_all": false, 
     "show": true, 
     "update-config": true, 
     "verbose": true
