dev-series.rc: was pointing at the wrong config file.
Signed-off-by: Brad Figg <brad.figg@canonical.com>

--- a/bugs/dev-series.rc
+++ b/bugs/dev-series.rc
@@ -26,7 +26,7 @@
         }, 
         "updated": "Monday, 12. September 2011 15:55 UTC"
     }, 
-    "configuration_file": "new.rc", 
+    "configuration_file": "dev-series.rc", 
     "launchpad_client_name": "lpltk.kernel.ProcNewBugs", 
     "search-criteria-status": [
         "New",
