chroot-setup: localize a shell script index
Signed-off-by: Tim Gardner <tim.gardner@canonical.com>

--- a/chroot-setup/scripts/chroot-defs.conf
+++ b/chroot-setup/scripts/chroot-defs.conf
@@ -68,6 +68,7 @@ mirror_ports_security[0]="http://ports.ubuntu.com/ubuntu-ports"
 #
 function not_expired_release ()
 {
+local i
 RELEASE=$1
 es=0
 for i in "${expired_releases[@]}"
