--- a/kernel-team-accounts/kernel_devs.conf
+++ b/kernel-team-accounts/kernel_devs.conf
@@ -149,3 +149,7 @@ kdev_name[36]="Li Li"
 kdev[37]="jesse"
 kdev_key[37]="https://launchpad.net/~wenchien/+sshkeys"
 kdev_name[37]="Jesse Sung"
+
+kdev[38]="jmp"
+kdev_key[38]="https://launchpad.net/~jplans/+sshkeys"
+kdev_name[38]="Jose Plans"
